examples/test/testpolicy17319.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17319
  namespace: namespace449
spec:
  podSelector:
    matchLabels:
      key28: value1
      key22: value46
      key24: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value2
      podSelector:
        matchLabels:
          key36: value31
          key41: value11
          key23: value38
